gitlab/gitlab-main/gitlab/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitlab
  namespace: gitlab-ce
  labels:
    app: gitlab
    release: gitlab
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
    service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"
    
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: gitlab
